--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <th>Informações Adicionais</th>
 </tr>
 <tr>
-    <td>João</td>
+    <td>Mariana</td>
     <td>25</td>
     <td>Sou estudante</td> 
 </tr>
