--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <tr>
                 <td>João</td>
                 <td>25</td>
-                <td>Estudante</td>
+                <td>Programador</td>
             </tr>
             <tr>
                 <td>Maria</td>
